--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   --white: #f5f5f5;
 }
 
-
 *{
   box-sizing: border-box;
   margin: 0;
@@ -18,6 +17,7 @@ body{
 section{
   display: flex;
   height: 100vh;
+  position: relative;
 }
 
 p,
