--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 body{
   background-color: var(--background);
   font-family: 'Times New Roman', serif;
+  scroll-behavior: smooth;
 }
 
 section{
